--- a/index.html
+++ b/index.html
@@ -2,28 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device, initial-scale=1.0">
     <title>Mis prácticas</title>
 </head>
-<body background="Documents\MyGitHub/Cap1.jpg" text="white" vlink="yellow" link="green">
+<body background="Cap2.jpg" text="white" vlink="yellow" link="yellow">
     <div align="center">
-        <H1>Mis prácticas</H1>
+        <H1>Mis Prácticas</H1>
         <hr color="white">
     </div>
     <div>
         <p>
+            <div align="center">
+            <H2>Francisco Javier Bergamín Pérez</H2></div>
             <br>
         </p>
         <table>
             <tr>
-                <td width="10%">
+                <td width="20%">
                     <p aligh="center">
 
                     </p>
                 </td>
                 <td width="30%">
                     <p aligh="center">
-                        <img src="images/check.jpeg" alt="check list html" width="100%" border="5">
+                        <img src="Cap1.jpg" alt="check list html" width="100%" border="5">
                     </p>
                 </td>
                 <td width="5%">
