--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </td>   
                 <td width="50%">
                     <ul >
-                        <li><a href="p1/index.html">Práctica 1</a></li>
+                        <li><a href="https://franciscojavierbp_cv.github.io/">Práctica 1</a></li>
                         <li>Práctica 2</li>
                     </ul>
                 </td>
