He añadido nueva web

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 </td>   
                 <td width="50%">
                     <ul >
-                        <li><a href="https://franciscojavierbp_cv.github.io/">Práctica 1</a></li>
-                        <li>Práctica 2</li>
+                        <li><a href="P1/index.html">Práctica 1</a></li>
+                        <li></li>
                     </ul>
                 </td>
                 <td width="10%">
