--- a/P1/index.html
+++ b/P1/index.html
@@ -40,7 +40,7 @@ height="150" />
 
     </td>
     </tr>
-<td width="70%" valign="top">
+<td width="30%" valign="top">
      <tr>
          <td colspan="2">
   
@@ -60,17 +60,17 @@ height="150" />
     </P>
  <td colspan="2">
     <P>
-        <CENTER><strong>
+        <strong>
                 <H3>IDIOMAS</H3>
-            </strong></CENTER>
+            </strong>
         > Español - Nativo
         <BR>
         > Inglés - Medio
     </P>
     <P>
-        <CENTER><strong>
+        <strong>
                 <H3>CONTACTO</H3>
-            </strong></CENTER>
+            </strong>
             
     <li>+34 673 373 485</li>
     <li>C/Sanchís Sivera 15, pta 18.
